Project

General

Profile

Actions

Bug #19638

closed

OSD MgrClient crash on shutdown

Added by John Spray about 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

ceph version 12.0.0-2674-g975ec23 (975ec235ed06ff48f34a356ff2dad547e366d9ab)
 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x110) [0xacce50]
 2: (Mutex::Lock(bool)+0x1a4) [0xa8cb94]
 3: (()+0x468d28) [0x570d28]
 4: (MgrClient::send_report()+0x4af) [0xaf75ef]
 5: (FunctionContext::finish(int)+0x2a) [0x72a93a]
 6: (Context::complete(int)+0x9) [0x5b03c9]
 7: (SafeTimer::timer_thread()+0x104) [0xac5d54]
 8: (SafeTimerThread::entry()+0xd) [0xac777d]
 9: (()+0x7dc5) [0xc6bcdc5]
 10: (clone()+0x6d) [0xd60373d]
1 jobs: ['1033928']

Just seen once so presumably very intermittent: jspray-2017-04-16_22:05:37-multimds-wip-jcsp-testing-20170415b-testing-basic-smithi/1033928


Related issues 1 (0 open1 closed)

Related to Ceph - Bug #19742: InvalidRead in MgrClient::send_report() on OSDCan't reproduceKefu Chai04/21/2017

Actions
Actions #1

Updated by Sage Weil about 7 years ago

  • Priority changed from Normal to Immediate
Actions #2

Updated by Sage Weil about 7 years ago

  • Related to Bug #19742: InvalidRead in MgrClient::send_report() on OSD added
Actions #3

Updated by Sage Weil about 7 years ago

/a/sage-2017-04-21_23:56:14-rados-wip-sage-testing---basic-smithi/1054158

Actions #4

Updated by Sage Weil almost 7 years ago

  • Status changed from New to Fix Under Review
Actions #5

Updated by Sage Weil almost 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions #6

Updated by Greg Farnum almost 7 years ago

  • Project changed from Ceph to mgr
  • Category deleted (110)
Actions

Also available in: Atom PDF